réecriture complete du readme, legere modification au gestion d'erreur lors de la sauvegarde et de l'affichage graphique